🔨 fix z-index issue on focused error fields

--- a/src/assets/global.styl
+++ b/src/assets/global.styl
@@ -344,6 +344,7 @@ textarea
 			color: c.error
 			border-color: c.error
 			&:focus
+				z-index: 50
 				box-shadow: 0 0 0 .25rem rgba(c.error, .2)
 textarea
 	width: 100%
